Upgraded gson, jersey, and okhttp libraries. Added support for JDK 10.