@@ -1,8 +1,8 @@
 apply plugin: 'java'
-apply plugin: 'ivy-publish'
+apply plugin: 'maven-publish'
 
-sourceCompatibility = 1.6
-version = '0.3.2'
+sourceCompatibility = 1.10
+version = '0.3.4'
 group = 'stellar'
 
 jar {
@@ -17,13 +17,8 @@ jar {
 
 publishing {
     publications {
-        ivy(IvyPublication) {
+        maven(MavenPublication) {
             from components.java
-        }
-    }
-    repositories {
-        ivy {
-            url "$projectDir/repos"
         }
     }
 }
@@ -33,15 +28,23 @@ repositories {
 }
 
 dependencies {
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.squareup.okhttp3:okhttp:3.11.0'
     compile 'com.moandjiezana.toml:toml4j:0.5.1'
     compile 'org.mockito:mockito-core:2.13.0'
-    compile 'com.google.guava:guava:18.0'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.guava:guava:26.0-jre'
+    compile 'com.google.code.gson:gson:2.8.5'
     compile 'commons-io:commons-io:2.4'
-    compile 'org.glassfish.jersey.core:jersey-client:2.22.1'
-    compile 'org.glassfish.jersey.media:jersey-media-sse:2.22.1'
+    compile 'org.glassfish.jersey.core:jersey-client:2.27'
+    compile 'org.glassfish.jersey.media:jersey-media-sse:2.27'
     compile 'net.i2p.crypto:eddsa:0.3.0'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.9.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+tasks.withType(AbstractCompile) {
+    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--add-modules", "java.xml.bind"]
 }
